--- a/cbs_latest_html.html
+++ b/cbs_latest_html.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title: RisuAI CBS Curly Brace Syntax 완전 가이드
+render_with_liquid: false
+---
+
 <h1 id="risuai-cbs-curly-brace-syntax-">RisuAI CBS (Curly Brace Syntax) 완전 가이드</h1>
 <blockquote>
 <p><strong>최종 업데이트</strong>: 2026-01-07<br><strong>버전</strong>: Latest (코드베이스 직접 분석)</p>
