--- a/cbs_latest_html.html
+++ b/cbs_latest_html.html
@@ -3,7 +3,7 @@ layout: default
 title: RisuAI CBS Curly Brace Syntax 완전 가이드
 render_with_liquid: false
 ---
-
+{% raw %}
 <h1 id="risuai-cbs-curly-brace-syntax-">RisuAI CBS (Curly Brace Syntax) 완전 가이드</h1>
 <blockquote>
 <p><strong>최종 업데이트</strong>: 2026-01-07<br><strong>버전</strong>: Latest (코드베이스 직접 분석)</p>
@@ -1583,3 +1583,4 @@ UTC 시각: {{isotime}}
 </ul>
 <hr>
 <p><strong>문서 작성</strong>: AI Analysis (직접 코드 탐색)<br><strong>라이선스</strong>: RisuAI 프로젝트 라이선스를 따름</p>
+{% endraw %}
